# nightswatch

./: .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: 01-requirements.md  02-hld.md  03-lld.md  04-data-model.md  05-api-spec.md
docs/adr/: 0001-tech-stack.md  0002-monolith-first.md  0003-investigation-as-agent.md  0004-job-queue.md
migrations/: env.py
migrations/versions/: 0001_tenants_and_api_keys.py  0002_integrations.py  0004_service.py  0005_topology_catalog.py  0006_alert_investigation.py  0007_investigation_stage.py  0008_tool_call.py  0009_report.py  0010_feedback.py  0011_knowledge.py  0012_investigation_backtest_columns.py
scripts/: README.md  dev_seed.py
specs/: 0001-tenant-and-api-keys.md  0002-integrations.md  0003-prometheus-connector.md  0004-service-registration.md  0005-topology-and-catalog.md  0006-alert-webhook.md  0007-orchestrator-skeleton.md  0008-llm-gateway.md  0009-query-prometheus-and-hypothesis.md  0010-slack-delivery.md  0011-validation-stage.md  0012-report-and-read-endpoints.md  0013-slack-callbacks-and-feedback.md  0014-knowledge-ingestion.md  0015-knowledge-tools.md  0016-backtest-and-replay.md  0017-hardening.md  README.md  TEMPLATE.md
src/ai_sre/: __init__.py  config.py  db.py  exceptions.py  main.py
src/ai_sre/api/: README.md  __init__.py  alerts.py  delivery.py  deps.py  feedback.py  integrations.py  investigations.py  knowledge.py  services.py  tenants.py
src/ai_sre/connectors/: README.md  __init__.py  base.py  registry.py
src/ai_sre/core/: README.md
src/ai_sre/delivery/: README.md  __init__.py  base.py  dispatcher.py  slack.py
src/ai_sre/llm/: README.md  __init__.py  gateway.py  tools.py
src/ai_sre/models/: __init__.py  alert.py  api_key.py  base.py  feedback.py  integration.py  investigation.py  knowledge.py  report.py  service.py  tenant.py
src/ai_sre/queue/: README.md  __init__.py  base.py  procrastinate_queue.py
src/ai_sre/schemas/: __init__.py  alert.py  api_key.py  common.py  feedback.py  integration.py  investigation.py  knowledge.py  service.py  tenant.py
src/ai_sre/utils/: __init__.py  crypto.py  ids.py  logging.py  webhook_signature.py
src/ai_sre/workers/: README.md  __init__.py  app.py  investigation_worker.py
tests/: conftest.py
tests/fakes/: __init__.py  llm.py  prometheus.py
tests/integration/: conftest.py  test_alertmanager_webhook.py  test_auth_flow.py  test_backtest.py  test_feedback.py  test_hypothesis_stage.py  test_integration_health_check.py  test_integration_routes.py  test_investigation_read.py  test_knowledge.py  test_knowledge_tools.py  test_orchestrator.py  test_service_routes.py  test_service_topology_routes.py  test_slack_delivery.py  test_slack_oauth.py  test_tool_call_persistence.py  test_validation_stage.py
tests/unit/: test_budget.py  test_smoke.py
tests/unit/connectors/: test_prometheus_catalog.py  test_prometheus_connector.py  test_promql_builder.py  (+1 more)
(+79 files in other folders)
