[project]
name = "ai-sre"
version = "0.0.1"
description = "AI-driven SRE: alerts in, RCAs out."
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",

    # db
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",

    # queue (Postgres-backed; see ADR-0004)
    "procrastinate>=2.9",
    "psycopg[binary,pool]>=3.2",        # required by procrastinate's PsycopgConnector

    # http clients
    "httpx>=0.27",

    # llm
    "anthropic>=0.34",

    # observability
    "structlog>=24.1",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "prometheus-client>=0.20",

    # utils
    "python-ulid>=2.7",
    "tenacity>=8.2",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",        # httpx mocking
    "freezegun>=1.5",
    "types-passlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_sre"]

# -------------------- ruff --------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle / pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "SIM",              # simplify
    "RUF",              # ruff-specific
    "ASYNC",            # async patterns
    "TID",              # tidy imports
]
ignore = [
    "E501",   # handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["ai_sre"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's DI sentinels look like generic-Python footguns to B008 but aren't —
# `Depends`, `Header`, etc. are evaluated per-request by FastAPI, not at
# function-definition time. Telling bugbear they're safe in defaults is the
# documented escape hatch (see https://docs.astral.sh/ruff/rules/function-call-in-default-argument/).
extend-immutable-calls = [
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Query",
    "fastapi.Security",
]

# -------------------- mypy --------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]
exclude = ["migrations/"]

# -------------------- pytest --------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast unit tests",
    "integration: integration tests requiring Postgres",
]
